# Hydragent

./: .env.example  .env_base  .gitignore  2.security_gateways_cli.md  3hydragent-skills-improvement-plan.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  FEATURES.md  Hydragent.cmd  INSTALL.md  ONBOARDING.md  PHASE_7_COMPLETION_SUMMARY.md  README.md  RELEASE_NOTES_v0.5.0.md  RELEASE_NOTES_v0.6.0.md  RELEASE_NOTES_v0.7.0.md  ROADMAP.md  TODO.md  TODO_PHASE2.md  TODO_PHASE4.md  currunt idea.md  design_spec.md  install.ps1  install.sh  requirements.txt  scratch pad.md
RaD/: chatgpt.md  kimi.md
adapters/: README.md  bus_client.py  cli_adapter.py  discord_adapter.py  email_adapter.py  generate_library_graph.py  pyproject.toml  requirements.txt  searchxng.py  slack_adapter.py  telegram_adapter.py  test_connection.py  webhook_adapter.py  websocket_adapter.py
adapters/channels/: __init__.py
adapters/channels/cli/: cli_adapter.py
adapters/channels/discord/: discord_adapter.py
adapters/channels/email/: email_adapter.py
adapters/channels/slack/: slack_adapter.py
adapters/channels/telegram/: telegram_adapter.py
adapters/channels/telegram/miniapp/: graph.html  index.html
adapters/channels/web/: index.html  web_adapter.py
adapters/channels/web/control-ui/: Cargo.toml  Dioxus.toml  index.html
adapters/channels/web/control-ui/src/: main.rs
adapters/channels/webhook/: webhook_adapter.py
adapters/channels/websocket/: websocket_adapter.py
adapters/control_ui/: README.md  __init__.py  __main__.py  requirements.txt
adapters/hydragent_py/: README.md  __init__.py  bus.py  bus_impl.py  cli.py  client.py  plugins.py  py.typed  repl.py
adapters/hydragent_py/builtin/: __init__.py  hello_world.py
adapters/miniapp/: app.js  graph.html  index.html  style.css
adapters/utils/: __init__.py  agent_reach_runner.py  bus_client.py  formatter.py  generate_library_graph.py
config/: SOUL.md  USER.md  curator.toml  (+2 more)
crates/hydragent-bench/: Cargo.toml
crates/hydragent-bench/src/: dataset.rs  lib.rs  metrics.rs  report.rs  runner.rs
crates/hydragent-bench/tests/: integration_test.rs
crates/hydragent-core/: Cargo.toml
crates/hydragent-core/src/: cli_repl.rs  config.rs  doctor.rs  dream.rs  examples.rs  logger.rs  main.rs  markdown_render.rs  onboard.rs  orchestrator.rs  paths.rs  react_loop.rs  session.rs  skill_induction.rs  status_bar.rs  strategy.rs  swarm_runner.rs  tui_header.rs  uninstall.rs  update.rs
crates/hydragent-core/src/prompts/: compaction_prompt.txt  extraction_prompt.txt  extraction_system.txt  extraction_user.txt
crates/hydragent-core/tests/: picker_smoke.rs  picker_tty.rs  repl_polish.rs
crates/hydragent-embed/: Cargo.toml
crates/hydragent-embed/src/: embedder.rs  lib.rs  model_downloader.rs
crates/hydragent-gateway/: Cargo.toml
crates/hydragent-gateway/src/: channel_trait.rs  dedup.rs  lib.rs  rate_limiter.rs  router.rs  static_files.rs  web_server.rs
crates/hydragent-memory/: Cargo.toml
crates/hydragent-memory/benches/: retrieval_benchmark.rs
crates/hydragent-memory/examples/: design_spec_stress_test.rs
crates/hydragent-memory/src/: bounded_md.rs  context_injector.rs  lib.rs  librarian.rs  library.rs  models.rs  retrieval.rs  semantic_store.rs  session_store.rs  vector_index.rs
crates/hydragent-model/: Cargo.toml
crates/hydragent-model/src/: council.rs  custom_openai.rs  lib.rs  model_trait.rs  ollama.rs  openrouter.rs  profiles.rs  router.rs
crates/hydragent-model/tests/: custom_openai_integration.rs
crates/hydragent-planner/: Cargo.toml
crates/hydragent-planner/src/: ascii.rs  dag.rs  dag_execution.rs  decomposer.rs  lib.rs  replan.rs  scheduler.rs  serializer.rs  wiki.rs
crates/hydragent-planner/tests/: dag_execution_test.rs  planner_tests.rs  replan_test.rs
crates/hydragent-planner/tests/common/: mod.rs
crates/hydragent-sandbox/: Cargo.toml
crates/hydragent-sandbox/src/: engine.rs  lib.rs  limits.rs  wasm_tool.rs
crates/hydragent-scheduler/: Cargo.toml
crates/hydragent-scheduler/src/: cron_scheduler.rs  heartbeat.rs  lib.rs  work_iq.rs
crates/hydragent-scheduler/src/work_iq/: match_engine.rs  mod.rs  poller.rs
crates/hydragent-security/: Cargo.toml
crates/hydragent-security/src/: anomaly.rs  lib.rs  merkle.rs  sanitizer.rs  sgnl.rs  signer.rs  taint.rs
crates/hydragent-security/tests/: merkle_integration.rs  sanitizer_test.rs  sgnl_integration.rs  taint_integration.rs
crates/hydragent-skills/: Cargo.toml
crates/hydragent-skills/skills/: a.yaml  b.yaml  builtin-a.yaml  builtin-b.yaml  c.yaml  convert-csv-to-json.yaml  debug-rust-error.yaml  demo.yaml  demote-me.yaml  healthy.yaml  mut.yaml  promote-me.yaml  stale.yaml  summarize-github-issue.yaml  untouched.yaml  x.yaml
crates/hydragent-skills/src/: composer.rs  curator.rs  executor.rs  extractor.rs  lib.rs  library.rs  similarity.rs  skill.rs  tools.rs
crates/hydragent-skills/tests/: load_builtins.rs
crates/hydragent-swarm/: Cargo.toml
crates/hydragent-swarm/src/: agent.rs  coordinator.rs  lib.rs  mailbox.rs  spawner.rs  supervisor.rs
crates/hydragent-swarm/tests/: agent_test.rs  coordinator_test.rs  council_spawn_test.rs  load_test.rs  mailbox_test.rs
crates/hydragent-swarm/tests/common/: mod.rs
crates/hydragent-tools/: Cargo.toml
crates/hydragent-tools/src/: agent_reach.rs  echo.rs  file_read.rs  lib.rs  memory_forget.rs  memory_search.rs  memory_store.rs  phase6.rs  registry.rs  rss_subscribe.rs  schedule_task.rs  security.rs  send_message.rs  skill_list.rs  skill_run.rs  skill_search.rs  standing_orders.rs  tool_trait.rs  url_fetch.rs  user_profile.rs  web_search.rs
crates/hydragent-vault/: Cargo.toml
crates/hydragent-vault/config/security/: admin_auth.hash
crates/hydragent-vault/src/: column_cipher.rs  crypto.rs  injector.rs  lib.rs  mlock.rs  rotator.rs  secure_buffer.rs  taint.rs  vault.rs
crates/hydragent-vault/tests/: column_cipher_integration.rs  rotation_integration.rs  secure_buffer_lifecycle.rs
tools/finetune/: README.md  generate_dataset.py  pyproject.toml  requirements.txt  train_lora.py
(+100 files in other folders)
