[workspace]
resolver = "2"
members = [
    "crates/hydragent-core",
    "crates/hydragent-types",
    "crates/hydragent-bus",
    "crates/hydragent-model",
    "crates/hydragent-tools",
    "crates/hydragent-memory",
    "crates/hydragent-embed",
    "crates/hydragent-vault",
    "crates/hydragent-sandbox",
    "crates/hydragent-gateway",
]

[workspace.dependencies]
# Async runtime
tokio          = { version = "1", features = ["full"] }
tokio-stream   = "0.1"
async-trait    = "0.1"

# HTTP
reqwest        = { version = "0.12", features = ["json", "stream"] }
wiremock       = { version = "0.6" }   # Make it regular dependency for simplicity, or we can make it optional

# Serialization
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"

# Database
sqlx           = { version = "0.8", features = ["sqlite", "runtime-tokio", "migrate", "uuid"] }

# CLI
clap           = { version = "4", features = ["derive"] }

# Logging / Tracing
tracing        = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Config
dotenvy        = "0.15"
config         = "0.14"

# Utilities
anyhow         = "1"
uuid           = { version = "1", features = ["v4"] }
chrono         = { version = "0.4", features = ["serde"] }
sha2           = "0.10"   # For params_hash in ToolCallRecord
