[workspace]
resolver = "2"
members = [
    "crates/hydragent-core",
    "crates/hydragent-types",
    "crates/hydragent-bus",
    "crates/hydragent-model",
    "crates/hydragent-tools",
    "crates/hydragent-memory",
    "crates/hydragent-embed",
    "crates/hydragent-vault",
    "crates/hydragent-sandbox",
    "crates/hydragent-gateway",
    "crates/hydragent-scheduler",
    "crates/hydragent-planner",
    "crates/hydragent-swarm",
    "crates/hydragent-security",
    "crates/hydragent-skills",
    "crates/hydragent-bench",
]

[workspace.dependencies]
# Async runtime
tokio          = { version = "1", features = ["full"] }
tokio-stream   = "0.1"
async-trait    = "0.1"

# HTTP
reqwest        = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
wiremock       = { version = "0.6" }   # Make it regular dependency for simplicity, or we can make it optional

# Serialization
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"

# Database
sqlx           = { version = "0.8", features = ["sqlite", "runtime-tokio", "migrate", "uuid"] }

# CLI
clap           = { version = "4", features = ["derive"] }

# Logging / Tracing
tracing        = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Config
dotenvy        = "0.15"
config         = "0.14"

# Utilities
anyhow         = "1"
uuid           = { version = "1", features = ["v4"] }
chrono         = { version = "0.4", features = ["serde"] }
sha2           = "0.10"   # For params_hash in ToolCallRecord
petgraph       = "0.6"    # DAG top-sort for swarm runner

# Stochastic selection (Track 5.4 — SelfHealingReplanner)
rand           = "0.8"

# Phase 6: Security pipeline (Track 6.1 — Merkle + Ed25519)
ed25519-dalek  = { version = "2", features = ["std", "zeroize", "rand_core"] }
hex            = "0.4"
zeroize        = { version = "1.7", features = ["derive"] }

# Phase 6 / Track 6.2: Taint sink policy loader
serde_yaml     = "0.9"

# Phase 6 / Track 6.3: Prompt injection guard + SGNL auth
regex          = "1"
dashmap        = "6"

# Phase 6 / Track 6.4: Column-AES (AES-256-GCM) + HKDF
aes-gcm        = "0.10"
hkdf           = "0.12"
