[package]
name = "hydragent-bench"
version = "0.1.0"
edition = "2021"

[lib]
name = "hydragent_bench"
path = "src/lib.rs"

[dependencies]
hydragent-types  = { path = "../hydragent-types" }
hydragent-skills = { path = "../hydragent-skills" }
serde      = { workspace = true }
serde_json = { workspace = true }
tokio      = { workspace = true }
anyhow     = { workspace = true }
thiserror  = "1"
tracing    = { workspace = true }
chrono     = { workspace = true }
clap       = { workspace = true }

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "bench"
path = "bin/bench.rs"
