[package]
name    = "hydragent-core"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hydragent"
path = "src/main.rs"

[dependencies]
hydragent-types  = { path = "../hydragent-types" }
hydragent-bus    = { path = "../hydragent-bus" }
hydragent-model  = { path = "../hydragent-model" }
hydragent-tools  = { path = "../hydragent-tools" }
hydragent-memory = { path = "../hydragent-memory" }
hydragent-embed  = { path = "../hydragent-embed" }
hydragent-vault  = { path = "../hydragent-vault" }
hydragent-sandbox = { path = "../hydragent-sandbox" }
hydragent-gateway = { path = "../hydragent-gateway" }
hydragent-scheduler = { path = "../hydragent-scheduler" }
hydragent-planner = { path = "../hydragent-planner" }
hydragent-swarm  = { path = "../hydragent-swarm" }
tokio            = { workspace = true }
clap             = { workspace = true }
tracing          = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow           = { workspace = true }
dotenvy          = { workspace = true }
config           = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
async-trait      = { workspace = true }
chrono           = { workspace = true }
uuid             = { workspace = true }
sqlx             = { workspace = true }
petgraph         = { workspace = true }
rpassword        = "7.3"




