[package]
name    = "hydragent-core"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hydragent"
path = "src/main.rs"

[dependencies]
hydragent-types  = { path = "../hydragent-types" }
hydragent-bus    = { path = "../hydragent-bus" }
hydragent-model  = { path = "../hydragent-model" }
hydragent-tools  = { path = "../hydragent-tools" }
hydragent-memory = { path = "../hydragent-memory" }
hydragent-embed  = { path = "../hydragent-embed" }
hydragent-vault  = { path = "../hydragent-vault" }
hydragent-sandbox = { path = "../hydragent-sandbox" }
hydragent-gateway = { path = "../hydragent-gateway" }
hydragent-scheduler = { path = "../hydragent-scheduler" }
hydragent-planner = { path = "../hydragent-planner" }
hydragent-swarm  = { path = "../hydragent-swarm" }
hydragent-security = { path = "../hydragent-security" }
hydragent-skills  = { path = "../hydragent-skills" }
tokio            = { workspace = true }
clap             = { workspace = true }
tracing          = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow           = { workspace = true }
dotenvy          = { workspace = true }
config           = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
async-trait      = { workspace = true }
chrono           = { workspace = true }
uuid             = { workspace = true }
sqlx             = { workspace = true }
petgraph         = { workspace = true }
rpassword        = "7.3"
# Used by `onboard` for the arrow-key navigable picker. Kept off
# the workspace table because no other crate needs it yet.
crossterm        = "0.29"
# Terminal-flavoured markdown rendering for LLM responses. Used by
# the REPL (`hydragent chat`) and the `test-brain` subcommand to
# turn the model's markdown reply into nicely styled terminal
# output (headings, code blocks, tables, bold/italic).
termimad         = "0.30"
# Ergonomic ANSI color helpers (avoids the 30+ \x1b[Nm hand-constants
# the REPL was carrying around). Used by tui_header.rs and
# status_bar.rs to render the Kimi-CLI-style two-column header
# and the bottom statusline.
owo-colors       = { version = "4", features = ["supports-colors"] }

[dev-dependencies]
tempfile         = "3"
tokio            = { workspace = true, features = ["macros", "rt-multi-thread"] }




