[package]
name = "hydragent-embed"
version = "0.1.0"
edition = "2021"

[dependencies]
candle-core = "0.8.0"
candle-nn = "0.8.0"
candle-transformers = "0.8.0"
tokenizers = { version = "0.19", default-features = false, features = ["onig"] }
reqwest = { workspace = true, features = ["json", "stream"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
