[package]
name = "hydragent-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
hydragent-types = { path = "../hydragent-types" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
async-trait = { workspace = true }
lru = "0.12"
parking_lot = "0.12"
