[package]
name = "hydragent-memory"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
hydragent-types = { path = "../hydragent-types" }
hydragent-embed = { path = "../hydragent-embed" }
bincode = "1.3"
tiktoken-rs = "0.12"
tracing = { workspace = true }

