[package]
name = "hydragent-model"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
tokio = { workspace = true }
tokio-stream = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
thiserror = "1"
tracing = { workspace = true }
async-trait = { workspace = true }
hydragent-vault = { path = "../hydragent-vault" }
zeroize = { version = "1.7", features = ["derive"] }

[dev-dependencies]
wiremock = { workspace = true }

