[package]
name = "hydragent-planner"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

petgraph = "0.6"

hydragent-types = { path = "../hydragent-types" }
hydragent-model = { path = "../hydragent-model" }
