[package]
name = "hydragent-skills"
version = "0.1.0"
edition = "2021"

[lib]
name = "hydragent_skills"
path = "src/lib.rs"

[dependencies]
hydragent-types = { path = "../hydragent-types" }
serde      = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
sqlx       = { workspace = true }
tokio      = { workspace = true }
async-trait = { workspace = true }
anyhow     = { workspace = true }
thiserror  = "1"
tracing    = { workspace = true }
uuid       = { workspace = true }
chrono     = { workspace = true }
sha2       = { workspace = true }
hydragent-embed = { path = "../hydragent-embed" }
hex        = "0.4"
regex      = "1"
once_cell  = "1"
clap       = { workspace = true }
toml       = "0.8"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "skills-import"
path = "bin/skills_import.rs"

