[package]
name = "hydragent-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
hydragent-types = { path = "../hydragent-types" }
