[package]
name = "hydragent-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
urlencoding = "2.1"
anyhow = { workspace = true }
hydragent-types = { path = "../hydragent-types" }
hydragent-memory = { path = "../hydragent-memory" }
uuid = { workspace = true }
hydragent-security = { path = "../hydragent-security" }
hydragent-vault = { path = "../hydragent-vault" }
hydragent-skills = { path = "../hydragent-skills" }
hydragent-scheduler = { path = "../hydragent-scheduler" }
regex = { workspace = true }
url = "2"

