[package]
name = "hydragent-vault"
version = "0.1.0"
edition = "2021"

[dependencies]
hydragent-types = { path = "../hydragent-types" }
argon2 = "0.5"
chacha20poly1305 = "0.10"
zeroize = { version = "1.7", features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
rand = "0.8"
anyhow = { workspace = true }
base64 = "0.21"
bincode = "1.3"
