[package]
name = "hydragent-vault"
version = "0.1.0"
edition = "2021"

[dependencies]
hydragent-types = { path = "../hydragent-types" }
argon2 = "0.5"
chacha20poly1305 = "0.10"
zeroize = { version = "1.7", features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
rand = "0.8"
anyhow = { workspace = true }
base64 = "0.21"
bincode = "1.3"
hex = { workspace = true }
sha2 = { workspace = true }
aes-gcm = { workspace = true }
hkdf = { workspace = true }
thiserror = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Memory"] }
