[package]
name = "hydragent-control-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.5", features = ["web"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["WebSocket", "MessageEvent", "BinaryType"] }
futures-util = "0.3"
gloo-net = "0.5"
